--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "LearnBase",
-  "short_name": "LearnBase",
-  "description": "Learning platform for Corbin and Charlotte",
+  "name": "EagleLearn",
+  "short_name": "EagleLearn",
+  "description": "EagleLearn – Soaring to Success",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0f0f1a",
-  "theme_color": "#6c63ff",
+  "background_color": "#0b1f3a",
+  "theme_color": "#b8860b",
   "orientation": "any",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' rx='40' fill='%236c63ff'/><text y='130' x='30' font-size='120' font-family='Arial'>🎓</text></svg>",
+      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 192 192'><rect width='192' height='192' rx='40' fill='%230b1f3a'/><text y='130' x='30' font-size='120'>🦅</text></svg>",
       "sizes": "192x192",
       "type": "image/svg+xml"
     }
